added support for TinyMCE v5

--- a/filebrowser/templates/filebrowser/version.html
+++ b/filebrowser/templates/filebrowser/version.html
@@ -19,6 +19,9 @@
     {% ifequal query.pop '4' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv4.js" %}"></script>
     {% endifequal %}
+    {% ifequal query.pop '5' %} <!-- TinyMCE -->
+    <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv5.js" %}"></script>
+    {% endifequal %}
 {% endblock %}
 
 <!-- CONTENT -->
@@ -35,7 +38,7 @@
             })(django.jQuery);
         </script>
         {% endifequal %}
-        {% if query.pop == '2' or query.pop == '4' %} <!-- TinyMCE -->
+        {% if query.pop == '2' or query.pop == '4' or query.pop == '5' %} <!-- TinyMCE -->
         <script type="text/javascript" charset="utf-8">
             (function($) {
                 $(document).ready(function() {
