--- a/filebrowser/templates/filebrowser/index.html
+++ b/filebrowser/templates/filebrowser/index.html
@@ -29,6 +29,9 @@
     {% ifequal query.pop '4' %} <!-- TinyMCE -->
     <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv4.js" %}"></script>
     {% endifequal %}
+    {% ifequal query.pop '5' %} <!-- TinyMCE -->
+    <script language="javascript" type="text/javascript" src="{% static "filebrowser/js/FB_TinyMCEv5.js" %}"></script>
+    {% endifequal %}
     {{ media }}
     <script type="text/javascript" charset="utf-8">
         (function($) {
